# Real-Time-Distributed-System-Monitoring-Platform-

./: README.md
sysmon/: .gitignore  README.md
sysmon/agent/: CMakeLists.txt  Dockerfile
sysmon/agent/src/: kafka_producer.cpp  kafka_producer.hpp  main.cpp  metrics_collector.cpp  metrics_collector.hpp  thread_pool.hpp
sysmon/backend/: Dockerfile  go.mod  go.sum
sysmon/backend/cmd/: main.go
sysmon/backend/internal/alert/: engine.go
sysmon/backend/internal/api/: handlers.go
sysmon/backend/internal/kafka/: consumer.go
sysmon/backend/internal/metrics/: types.go
sysmon/backend/internal/redis/: cache.go
sysmon/docker/: docker-compose.yml
sysmon/scripts/: gen_diagram.py  run.sh
